# qtatspi

./: .gitignore  CMakeLists.txt  Messages.sh  README  qspiaccessiblebridge.pro  qspiadaptor.pro
adaptor/: adaptor.pro  bridge.cpp  registry-proxy.cpp  registry-proxy.h
doc/: README  README.markdown  TODO  qatspi.qdocconf  qspiaccessiblebridge.dia
examples/: CMakeLists.txt
examples/calculator/: CMakeLists.txt  button.cpp  button.h  calculator.cpp  calculator.h  calculator.pro  main.cpp
examples/declarative/: Button.qml  CMakeLists.txt  accessible.qml  declarative.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
examples/scenegraph/: Button.qml  accessible.qml  mainwindow.cpp  mainwindow.ui  scenegraph.pro
examples/simple/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  simple.pro
examples/tabbar/: main.cpp  mainwindow.cpp  mainwindow.ui  simple  tabbar  tabbar.pro
src/: CMakeLists.txt  accessible.cpp  accessible.h  accessible_adaptor.h  accessible_adaptor_impl.cpp  action_adaptor.h  action_adaptor_impl.cpp  adaptor.cpp  adaptor.h  adaptor_marshallers.cpp  adaptor_marshallers.h  application.cpp  application.h  application_adaptor.h  application_adaptor_impl.cpp  atspiadaptor.cpp  atspiadaptor.h  bridge.cpp  bridge.h  bridge.pro  cache.cpp  cache.h  component_adaptor.h  component_adaptor_impl.cpp  constant_mappings.cpp  constant_mappings.h  dbusconnection.cpp  dbusconnection.h  device_event_controller_proxy.cpp  device_event_controller_proxy.h  editable_text_adaptor.h  editable_text_adaptor_impl.cpp  index.qdoc  main.cpp  object.cpp  object.h  proxy_marshallers.cpp  proxy_marshallers.h  qspiaccessibleinterface.cpp  qspiaccessibleinterface.h  (+17 more)
test/: button.cpp  calculator.cpp  main.cpp  test.pro
test/calculator/: calculator.cpp  calculator.h
test/simple/: main.cpp  mainwindow.cpp  mainwindow.ui  simple.pro
tests/: CMakeLists.txt  tests.pro  tst_qt-atspi.cpp
translations/: CMakeLists.txt  translations-howto.txt
xml/: Accessible.xml  Application.xml  DeviceEventController.xml  Event.xml  Selection.xml  Text.xml  org.freedesktop.atspi.Accessible.xml  org.freedesktop.atspi.Action.xml  org.freedesktop.atspi.Application.xml  org.freedesktop.atspi.Collection.xml  org.freedesktop.atspi.Component.xml  org.freedesktop.atspi.Desktop.xml  org.freedesktop.atspi.DeviceEventController.xml  org.freedesktop.atspi.DeviceEventListener.xml  org.freedesktop.atspi.Document.xml  org.freedesktop.atspi.EditableText.xml  org.freedesktop.atspi.Hyperlink.xml  org.freedesktop.atspi.Hypertext.xml  org.freedesktop.atspi.Image.xml  org.freedesktop.atspi.LoginHelper.xml  org.freedesktop.atspi.Registry.xml  org.freedesktop.atspi.Selection.xml  org.freedesktop.atspi.Selector.xml  org.freedesktop.atspi.State.xml  org.freedesktop.atspi.Table.xml  org.freedesktop.atspi.Text.xml  org.freedesktop.atspi.Tree.xml  org.freedesktop.atspi.Value.xml
